--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "socket.io-client": "^4.7.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
+  },
+  "scripts": {
+    "format": "prettier --write \"src/**/*.js\""
   }
 }
