--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "sequelize-cli": "^6.6.2"
   },
   "scripts": {
-    "format": "prettier --write \"src/**/*.js\""
+    "format": "prettier --write \"*.js\" \"**/*.js\""
   }
 }
