--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "admin",
-    "password": "12341234",
-    "database": "malldb",
-    "host": "malldb.cd2wlfd8lgtx.ap-northeast-2.rds.amazonaws.com",
+    "database": "process.env.DB_DATABASE",
+    "host": "process.env.DB_HOST",
+    "username": "process.env.DB_USER",
+    "password": "process.env.DB_PASSWORD",
     "dialect": "mysql"
   },
   "test": {
