--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,12 @@
 {
   "development": {
-    "database": "process.env.DB_DATABASE",
-    "host": "process.env.DB_HOST",
-    "username": "process.env.DB_USER",
-    "password": "process.env.DB_PASSWORD",
+    "database": "malldb",
+    "host": "malldb.cd2wlfd8lgtx.ap-northeast-2.rds.amazonaws.com",
+    "username": "admin",
+    "password": "12341234",
     "dialect": "mysql"
   },
+  
   "test": {
     "username": "root",
     "password": null,
