--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "type": "module",
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "resolver": {
+    "prisma": "prisma/schema.prisma"
+  },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.6.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
@@ -10,6 +19,15 @@
     "sequelize-cli": "^6.6.2"
   },
   "scripts": {
-    "format": "prettier --write \"*.js\" \"**/*.js\""
-  }
+    "prisma": "prisma generate",
+    "format": "prettier --write \"*.js\" \"**/*.js\"",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
+  },
+  "name": "advanced_mall",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/joeunparkdev/advanced_mall.git",
+  "author": "Jo Park <39757235+joeunparkdev@users.noreply.github.com>",
+  "license": "MIT"
 }
