--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.6.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "sequelize-cli": "^6.6.2"
