--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "prisma": "^5.6.0",
     "socket.io-client": "^4.7.2",
     "supertest": "^6.3.3"
