--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "main": "index.js",
   "repository": "https://github.com/joeunparkdev/advanced_mall.git",
   "author": "Jo Park <39757235+joeunparkdev@users.noreply.github.com>",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "license": "MIT"
 }
