--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "prisma": "^5.6.0",
     "socket.io-client": "^4.7.2",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "svelte": "^3.0.0",
+    "svelte-routing": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
