--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -15,11 +15,14 @@
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^7.1.2",
+    "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.55.0",
     "vite": "^5.0.7"
   },
   "dependencies": {
+    "kakao-sdk": "^3.1.0",
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^2.10.0"
   }
