--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
+    "passport": "^0.7.0",
+    "passport-kakao": "^1.0.1",
     "prisma": "^5.6.0",
     "socket.io-client": "^4.7.2",
     "supertest": "^6.3.3",
