--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
+    "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
     "prisma": "^5.6.0",
