--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.6.0",
+    "aws-sdk": "^2.1517.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -16,6 +17,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
