--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "prisma": "prisma/schema.prisma"
   },
   "dependencies": {
-    "@prisma/client": "5.6.0",
+    "@prisma/client": "^5.7.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.0",
     "socket.io-client": "^4.7.2",
     "supertest": "^6.3.3",
     "svelte": "^3.0.0",
