--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "prisma": "prisma/schema.prisma"
   },
   "dependencies": {
-
     "@prisma/client": "5.6.0",
     "aws-sdk": "^2.1517.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-kakao": "^1.0.1",
     "prisma": "^5.7.0",
