--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
     "printWidth": 80,
     "tabWidth": 2,
     "useTabs": false,
-    "semi": false,
-    "singleQuote": true
-}
+    "semi": true
+  }
