--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "prisma": "prisma/schema.prisma"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.474.0",
     "@prisma/client": "^5.7.0",
-    "aws-sdk": "^2.1517.0",
+    "aws-sdk": "^2.1519.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -19,7 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^2.10.0",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
